--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,21 @@
-appdirs==1.4.3
-asgiref==3.2.3
-certifi==2019.11.28
-chardet==3.0.4
-distlib==0.3.0
+asgiref==3.5.0
+certifi==2021.10.8
+charset-normalizer==2.0.12
+distlib==0.3.4
 dj-database-url==0.5.0
-Django==3.0.3
-django-ckeditor==5.9.0
+Django==3.2.13
 django-heroku==0.3.1
-django-js-asset==1.2.2
-django-rest-framework==0.1.0
-djangorestframework==3.11.0
-filelock==3.0.12
-gcloud==0.17.0
-googleapis-common-protos==1.51.0
-gunicorn==20.0.4
-httplib2==0.17.0
-idna==2.9
-importlib-metadata==1.5.0
-importlib-resources==1.0.2
-jws==0.1.3
-oauth2client==3.0.0
-pathlib2==2.3.5
-Pillow==7.0.0
-protobuf==3.11.3
-psycopg2==2.8.4
-psycopg2-binary==2.8.4
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycryptodome==3.4.3
-Pyrebase==3.0.27
-python-jwt==2.0.1
-pytz==2019.3
-requests==2.11.1
-requests-toolbelt==0.7.0
-rsa==4.0
-six==1.14.0
-sqlparse==0.3.0
-urllib3==1.25.8
-virtualenv==20.0.5
-whitenoise==5.0.1
-zipp==3.0.0
+filelock==3.6.0
+idna==3.3
+importlib-metadata==4.11.3
+platformdirs==2.5.2
+psycopg2==2.9.3
+pytz==2022.1
+requests==2.27.1
+six==1.16.0
+sqlparse==0.4.2
+typing-extensions==4.2.0
+urllib3==1.26.9
+virtualenv==20.14.1
+whitenoise==6.0.0
+zipp==3.8.0
